fixed vscode launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug Unit Test",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/test-lab",
+            "program": "${workspaceRoot}/build/debug/myapp_d",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -34,7 +34,7 @@
             "name": "Debug Exe",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/myprogram",
+            "program": "${workspaceRoot}/build/debug/myapp_t",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
