--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration (CI) 
+name: Continuous Integration (CI)
 
 on:
   push:
@@ -15,5 +15,17 @@ jobs:
     - uses: actions/checkout@v4
     - name: make
       run: make
+    - name: make debug
+      run: make debug
+    - name: make release
+      run: make release
+    - name: make test
+      run: make test
+    - name: make clean
+      run: make clean
+    - name: make all
+      run: make all
     - name: make check
       run: make check
+    - name: make report
+      run: make report
