--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up CodeSpace environment
-      run: .devcontainer/setup.sh
+      run: bash .devcontainer/setup.sh
     - name: make
       run: make
     - name: make debug
