--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -1,3 +1,8 @@
 {
-    "postCreateCommand": "bash ./setup.sh"
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+  "features": {
+    "ghcr.io/shanep/makefile-project-starter-devcontainer": {
+      "toolVersion": "latest"
+    }
+  }
 }
