--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,9 @@ on:
     branches: [ "master" ]
 
 jobs:
+
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: make
@@ -19,26 +18,21 @@ jobs:
       run: make debug
     - name: make release
       run: make release
-    - name: make test
-      run: make test
-    - name: make clean
-      run: make clean
-    - name: make all
-      run: make all
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v4
     - name: make check
       run: make check
-    - name: make report
-      run: make report
+
+  leak:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v4
     - name: make leak
       run: make leak
     - name: make leak-test
       run: make leak-test
-    - name: Submission Report
-      run: ./create-report.sh
-    - name: Submission Report Example
-      run: ./create-report.sh example
-    - uses: stefanzweifel/git-auto-commit-action@v6
-      with:
-        commit_message: "Automated submission report update"
-        commit_user_name: "github-actions"
-        commit_user_email: "none@none.com"
