--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -8,6 +8,7 @@ jobs:
   report:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
     - name: Install pandoc
       uses: pandoc/actions/setup@v1
     - name: Run pandoc
