--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Run pandoc
       run: pandoc --version
     - name: Submission Report Example
-      run: ./create-report.sh example
+      run: ./create-report.sh
     - uses: stefanzweifel/git-auto-commit-action@v6
       with:
         commit_message: "Automated submission report example update"
