--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,5 @@ dkms.conf
 /myprogram
 /build
 /.vscode/c_cpp_properties.json
-submission-report.*
+submission-report.md
 submission-report-example.md
