--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install pandoc
       uses: pandoc/actions/setup@v1
-    - name: Run pandoc
+    - name: Check pandoc version
       run: pandoc --version
-    - name: Submission Report Example
+    - name: Create Submission Report
       run: ./create-report.sh
     - uses: stefanzweifel/git-auto-commit-action@v6
       with:
