--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -19,4 +19,4 @@ jobs:
       run: ./create-report.sh
     - uses: stefanzweifel/git-auto-commit-action@v6
       with:
-        commit_message: "Automated submission report example update"
+        commit_message: "Submission report created via GitHub Action"
