--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -15,6 +15,7 @@ jobs:
       uses: pandoc/actions/setup@v1
     - name: Check pandoc version
       run: pandoc --version
+    - uses: threeal/gcovr-action@v1.1.0
     - name: Create Submission Report
       run: ./create-report.sh
     - uses: stefanzweifel/git-auto-commit-action@v6
