--- a/.github/workflows/generate-report.yml
+++ b/.github/workflows/generate-report.yml
@@ -10,14 +10,16 @@ jobs:
   report:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Install pandoc
-      uses: pandoc/actions/setup@v1
-    - name: Check pandoc version
-      run: pandoc --version
     - uses: threeal/gcovr-action@v1.1.0
     - name: Create Submission Report
-      run: ./github/workflows/create-report.sh
+      id: create_report
+      run: |
+        $GITHUB_WORKSPACE/github/workflows/create-report.sh
+        echo "files=$(printf '"%s" ' submission-report.md)" > $GITHUB_OUTPUT
+    - uses: docker://pandoc/core:3.5
+      with:
+        args: -s -o submission-report.docx ${{ steps.create_report.outputs.files }}
+
     - uses: stefanzweifel/git-auto-commit-action@v6
       with:
         commit_message: "Submission report created via GitHub Action"
