--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,26 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: make
-      run: make
-    - name: make debug
-      run: make debug
-    - name: make release
-      run: make release
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/checkout@v4
+    - name: make all
+      run: make all
     - name: make check
       run: make check
-
-  leak:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-    - uses: actions/checkout@v4
     - name: make leak
       run: make leak
     - name: make leak-test
