--- a/.github/workflows/submission-report.yml
+++ b/.github/workflows/submission-report.yml
@@ -21,6 +21,17 @@ jobs:
       run: make all
     - name: Create Submission Report
       run: ./scripts/create-submission-report.sh -m
+    - name: GitHub Repo Info
+      run: |
+        echo "---" >> submission-report.md
+        echo "GitHub repo: ${{ github.repository }}" >> submission-report.md
+        if [ "${{ github.event.repository.visibility }}" == "public" ]; then
+          echo "The repository visibility is public." >> submission-report.md
+        elif [ "${{ github.event.repository.visibility }}" == "private" ]; then
+            echo "The repository visibility is private." >> submission-report.md
+        elif [ "${{ github.event.repository.visibility }}" == "internal" ]; then
+            echo "The repository visibility is internal." >> submission-report.md
+        fi
     - uses: docker://pandoc/core:3.5
       with:
         args: -s -o submission-report.docx submission-report.md
