Update actions with submission hash (#2)
* Include GitHub repo visibility in submission report
* Hashed file to ensure it is not tampered with
* Delete submission-report-example.docx

---------

Co-authored-by: shanep <1378027+shanep@users.noreply.github.com>

--- a/.github/workflows/submission-report.yml
+++ b/.github/workflows/submission-report.yml
@@ -21,6 +21,27 @@ jobs:
       run: make all
     - name: Create Submission Report
       run: ./scripts/create-submission-report.sh -m
+    - name: GitHub Repo Info
+      run: |
+        echo "---" >> submission-report.md
+        echo "## GitHub Info" >> submission-report.md
+        echo "- GitHub repo name: ${{ github.repository }}" >> submission-report.md
+        if [ "${{ github.event.repository.visibility }}" == "public" ]; then
+          echo "- The repository visibility is public." >> submission-report.md
+        elif [ "${{ github.event.repository.visibility }}" == "private" ]; then
+            echo "- The repository visibility is private." >> submission-report.md
+        elif [ "${{ github.event.repository.visibility }}" == "internal" ]; then
+            echo "- The repository visibility is internal." >> submission-report.md
+        fi
+        echo "- The workflow was triggered by ${{ github.actor }}" >> submission-report.md
+    - name: Hash the file to ensure it is not modified
+      run: |
+        sha256sum submission-report.md >> submission-report-hash.txt
+        echo "" >> submission-report.md
+        echo "Hash is committed to repo as submission-report-hash.txt" >> submission-report.md
+        echo "" >> submission-report.md
+        cat submission-report-hash.txt >> submission-report.md
+        
     - uses: docker://pandoc/core:3.5
       with:
         args: -s -o submission-report.docx submission-report.md
